<resources>
    <string name="app_name">Battleships</string>

    <!--    Top Buttons-->
    <string name="exit_button">Exit</string>
    <string name="settings_button">Settings</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="scoreboard_button">Scoreboard</string>
    <string name="help_button">Help</string>

    <!--    Main Activity-->
    <string name="pvp_button">Player VS Player</string>
    <string name="pve_button">Player VS AI</string>

    <!--    Menu Activity-->
    <string name="sound_setting">Sound</string>
    <string name="vibration_setting">Vibration</string>

    <!--    Score board activity-->
    <string name="username">Username</string>
    <string name="victories">Victories</string>

    <!--    Preparation state-->
    <string name="nickname_hint">Player</string>
    <string name="nickname_hint_1">Player 1</string>
    <string name="nickname_hint_2">Player 2</string>
    <string name="shuffle_button">Shuffle</string>
    <string name="previous_player_name_conflict">Sorry, name \"%1$s\" taken by previous player :(</string>
    <string name="bot_name_conflict">Sorry, name \"%1$s\" taken by our bot :(</string>
    <string name="bad_rotation">Can\'t rotate ship from this position</string>

    <!--    Game state-->
    <string name="victories_delimiter">:</string>
    <string name="turn_indicator">Turn</string>
    <string name="bot_name">CaptainAI</string>
    <string name="history_button">History</string>

    <!--    Dialogs-->
    <string name="exit_dialog_message">Are you sure want to exit game?</string>
    <string name="back_dialog_message">Are you sure want to return to main menu?</string>
    <string name="accept_button">Yes</string>
    <string name="decline_button">No</string>
    <string name="not_all_ships_are_placed">Not all ships are placed</string>

<!--    Setup help-->
    <string name="how_to_place_ships">Drag ship with your fingers from blue-squared pull to game field</string>
    <string name="how_to_rotate_ships">Tap on placed ships to rotate them</string>
    <string name="how_to_randomize_ships">You can randomly place ships on the field with the following button</string>
    <string name="ok_button">Got it!</string>

<!--    Game help-->
    <string name="turn_rule">This arrow between the fields indicates which player is attacking, directed towards the attacked field</string>
    <string name="how_to_fire">Tap on the field to fire at the corresponding cell</string>
    <string name="what_is_hit_indicator">When hitting an enemy ship, the cell becomes like</string>
    <string name="what_is_miss_indicator">When hitting an empty cell, it becomes like</string>
    <string name="fire_rule">When hitting an enemy ship, you can make the next shot. When you miss an enemy ship, the turn is passed to another player</string>
    <string name="destroy_rule">Enemy ship destroying automatically hits surrounding cells</string>
    <string name="winning_rule">The first player to lose all ships is the loser.</string>
    <string name="how_to_see_history">You always can look up history of turns by pressing this button:</string>
    <string name="hit_indicator">red cross mark after hit</string>
    <string name="miss_indicator">blur blue point after miss</string>
    <string name="on_hit_indicator">explosion animation on tap</string>
    <string name="on_miss_indicator">water splash animation on tap</string>

<!--    Winner window-->
    <string name="congratulations">Congratulations!</string>
    <string name="wins">Wins!</string>

<!--    Game History-->
    <string name="close_button">Close</string>
    <string name="attacker">Attacker</string>
    <string name="index">#</string>
    <string name="point_under_attack">Where</string>
    <string name="attack_result">Status</string>
    <string name="point_delimiter">:</string>
    <string name="hit">Hit!</string>
    <string name="miss">Miss!</string>


</resources>