<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/icon_guide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".8"/>


        <TextView
            android:id="@+id/turn_rule"
            android:text="@string/turn_rule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="26sp"
            android:textColor="?colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_guide"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/turn_indicator"
            android:scaleType="centerInside"
            android:src="@drawable/shape_triangle"

            app:layout_constraintBottom_toBottomOf="@+id/turn_rule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_guide"
            app:layout_constraintTop_toTopOf="@id/turn_rule" />

        <TextView
            android:id="@+id/how_to_fire"
            android:text="@string/how_to_fire"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="26sp"
            android:textColor="?colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/turn_rule"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/what_is_hit_indicator"
            android:text="@string/what_is_hit_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="26sp"
            android:textColor="?colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/how_to_fire"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_guide"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="1dp"
            app:layout_constraintHeight_max="50dp"
            app:layout_constraintVertical_bias="0"
            android:contentDescription="@string/on_hit_indicator"
            android:scaleType="centerInside"
            android:src="@drawable/ic_exmp_explosion"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/what_is_hit_indicator"
            app:layout_constraintBottom_toBottomOf="@id/what_is_hit_indicator"
            app:layout_constraintStart_toEndOf="@id/icon_guide" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="1dp"
            app:layout_constraintHeight_max="50dp"
            app:layout_constraintVertical_bias="1"
            android:contentDescription="@string/hit_indicator"
            android:scaleType="centerInside"
            android:src="@drawable/ic_exmp_hit"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/what_is_hit_indicator"

            app:layout_constraintBottom_toBottomOf="@id/what_is_hit_indicator"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/what_is_miss_indicator"
            android:text="@string/what_is_miss_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="26sp"
            android:textColor="?colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/what_is_hit_indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_guide"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="1dp"
            app:layout_constraintHeight_max="50dp"
            app:layout_constraintVertical_bias="0"
            android:contentDescription="@string/on_hit_indicator"
            android:scaleType="centerInside"
            android:src="@drawable/ic_exmp_splash"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/what_is_miss_indicator"
            app:layout_constraintBottom_toBottomOf="@id/what_is_miss_indicator"
            app:layout_constraintStart_toEndOf="@id/icon_guide" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="1dp"
            app:layout_constraintHeight_max="50dp"
            app:layout_constraintVertical_bias="1"
            android:contentDescription="@string/hit_indicator"
            android:scaleType="centerInside"
            android:src="@drawable/ic_exmp_miss"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/what_is_miss_indicator"
            app:layout_constraintBottom_toBottomOf="@id/what_is_miss_indicator"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/fire_rule"
            android:text="@string/fire_rule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="26sp"
            android:textColor="?colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/what_is_miss_indicator"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/destroy_rule"
            android:text="@string/destroy_rule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="26sp"
            android:textColor="?colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/fire_rule"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/winning_rule"
            android:text="@string/winning_rule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="26sp"
            android:textColor="?colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/destroy_rule"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/how_to_see_history"
            android:text="@string/how_to_see_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="26sp"
            android:textColor="?colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/winning_rule"
            app:layout_constraintEnd_toEndOf="@id/icon_guide"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="1dp"
            android:contentDescription="@string/history_button"
            android:scaleType="centerInside"
            android:src="@drawable/ic_history"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/how_to_see_history"
            app:layout_constraintBottom_toBottomOf="@id/how_to_see_history"
            app:layout_constraintStart_toEndOf="@id/icon_guide"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/ok"
            android:contentDescription="@string/ok_button"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:textSize="30sp"
            android:paddingTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/how_to_see_history"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
