<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tw_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="30sp"
            android:text="@string/how_to_place_ships"
            android:textColor="?colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tw_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="30sp"
            android:text="@string/how_to_rotate_ships"
            android:textColor="?colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/tw_place"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tw_shuffle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tw_rotate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/icon_guide"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".8"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_kanadaka__regular"
                android:textSize="30sp"
                android:text="@string/how_to_randomize_ships"
                android:textColor="?colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/icon_guide"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_shuffle"
                android:contentDescription="@string/shuffle_button"
                android:scaleType="centerCrop"
                android:padding="10dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_guide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="h, 1:1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/ok"
            android:contentDescription="@string/ok_button"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:textSize="30sp"
            android:paddingTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tw_shuffle"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
