<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Entry">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_background"
        tools:ignore="contentDescription,ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/verticalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".9" />

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0000"
                android:contentDescription="@string/settings_button"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/left_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_settings" />

            <ImageButton
                android:id="@+id/exitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0000"
                android:contentDescription="@string/exit_button"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/right_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_exit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/mainButtonsLayout"
            android:layout_width="240dp"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/pvpButton"
                style="@style/MenuButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:paddingTop="15dp"
                android:text="@string/pvp_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/pveButton"
                style="@style/MenuButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:paddingTop="15dp"
                android:text="@string/pve_button"
                android:textSize="24sp" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>