<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/dialog_shape">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintHeight_min="30dp"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintHeight_min="30dp"
        app:layout_constraintGuide_percent=".9" />

    <ImageButton
        android:id="@+id/bt_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_min="30dp"
        android:padding="0dp"

        android:backgroundTint="#00000000"
        android:contentDescription="@string/back_button"

        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/left_guideline"
        app:srcCompat="@drawable/ic_back" />

    <ImageButton
        android:id="@+id/bt_help"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#00000000"

        android:contentDescription="@string/help_button"
        android:padding="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/top_buttons_divider"
        app:layout_constraintStart_toStartOf="@id/bt_back"
        app:layout_constraintEnd_toEndOf="@id/bt_exit"

        app:layout_constraintDimensionRatio="w, 1:1"
        app:srcCompat="@drawable/ic_book" />

    <ImageButton
        android:id="@+id/bt_exit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_min="30dp"
        android:padding="0dp"

        android:backgroundTint="#00000000"
        android:contentDescription="@string/exit_button"

        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/right_guideline"
        app:srcCompat="@drawable/ic_exit" />

    <View
        android:id="@+id/top_buttons_divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?colorPrimaryDark"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_exit"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/top_buttons_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".6" />

        <TextView
            android:id="@+id/player1_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"

            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="24sp"
            android:includeFontPadding="false"
            android:textColor="?colorPrimaryDark"
            android:text=""

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/middle_left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player2_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="24sp"
            android:includeFontPadding="false"
            android:textColor="?colorPrimaryDark"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/middle_right_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/middle_left_guideline"
            app:layout_constraintRight_toLeftOf="@id/middle_right_guideline" >

            <TextView
                android:id="@+id/victories_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:fontFamily="@font/aladin__regular"
                android:gravity="end"

                android:text="1"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="2sp"
                android:fontFamily="@font/aladin__regular"
                android:gravity="center"

                android:text="@string/victories_delimiter"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/victories_player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:fontFamily="@font/aladin__regular"
                android:gravity="start"

                android:text="2"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/score_divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/score_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/winner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="30sp"
            android:includeFontPadding="false"
            android:textColor="?colorPrimaryDark"
            android:gravity="center"
            android:text=""
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_kanadaka__regular"
            android:textSize="30sp"
            android:includeFontPadding="false"
            android:textColor="?colorPrimaryDark"
            android:gravity="center"
            android:text="@string/wins"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>